# xsynth-lv2

./: ChangeLog  README-DSSI  README.rst  configure.in
src/: Makefile.am  bitmap_about.xpm  bitmap_logo.xpm  gtkknob.c  gtkknob.h  gui_callbacks.c  gui_callbacks.h  gui_data.c  gui_data.h  gui_friendly_patches.c  gui_images.c  gui_images.h  gui_interface.c  gui_interface.h  gui_main.c  gui_main.h  manifest.ttl.in  minblep_tables.c  xsynth-dssi.c  xsynth-lv2.c  xsynth-lv2.ttl  xsynth.h  xsynth_data.c  xsynth_ports.c  xsynth_ports.h  xsynth_synth.c  xsynth_synth.h  xsynth_voice.c  xsynth_voice.h  xsynth_voice_blosc.h  xsynth_voice_render-original.c  xsynth_voice_render.c
